Sass-color-ready

--- a/src/components/pages/AllProduct/AllProduct.scss
+++ b/src/components/pages/AllProduct/AllProduct.scss
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 3fr;
     align-items: start;
+    margin-block: 1rem;
     padding-inline: 5rem;
     gap: 1rem;
   }
