--- a/src/components/pages/user/ResetPassword/ResetPassword.scss
+++ b/src/components/pages/user/ResetPassword/ResetPassword.scss
@@ -1,3 +1,5 @@
+@use '../../../../Sass/variables.scss' as *;
+
 .reset-password-container {
     display: flex;
     flex-direction: column;
@@ -5,7 +7,7 @@
     justify-content: center;
     padding: 20px;
     margin: 0 auto;
-    max-width: 400px;
+    max-width: 25rem;
     height: 100vh;
   }
   
@@ -30,14 +32,14 @@
   }
   
   .reset-password-input:focus {
-    border-color: #25D366;
+    border-color: $color-green-link;
     outline: none;
   }
   
   .reset-password-button {
     padding: 10px;
-    background-color: #25D366;
-    color: white;
+    background-color: $color-green-btn;
+    color: $color-white;
     border: none;
     border-radius: 5px;
     font-size: 1rem;
@@ -45,7 +47,7 @@
   }
   
   .reset-password-button:hover {
-    background-color: #1da851;
+    background-color: $color-green-btn;
   }
   
   .reset-password-error,
@@ -56,11 +58,11 @@
   }
   
   .reset-password-error {
-    color: red;
+    color:$color-red;
   }
   
   .reset-password-success {
-    color: green;
+    color: $color-green-mark;
   }
   
   @media (max-width: 480px) {
