--- a/src/components/pages/user/ForgotPassword/ForgotPassword.scss
+++ b/src/components/pages/user/ForgotPassword/ForgotPassword.scss
@@ -1,10 +1,12 @@
+@use '../../../../Sass/variables.scss' as *;
+
 .forgot-password-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 60vh;
-  background-color: #f4f4f4;
+  background-color: $color-white;
   padding: 20px;
   box-sizing: border-box;
 
@@ -34,50 +36,49 @@
     box-sizing: border-box;
 
     &:focus {
-      border-color: #25D366;
-      box-shadow: 0 0 5px rgba(37, 211, 102, 0.5);
+      border-color: $color-green-link;
     }
   }
 
   .submit-button {
     width: 100%;
     padding: 10px;
-    background-color: #25D366;
+    background-color: $color-black;
     border: none;
     border-radius: 4px;
-    color: white;
-    font-size: 16px;
+    color: $color-white;
+    font-size: 1rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
     box-sizing: border-box;
 
     &:hover {
-      background-color: #1db554;
+      background-color: $color-green-btn;
     }
   }
 
   .error-message,
   .success-message {
-    margin-top: 10px;
-    padding: 10px;
+    margin-top: 0.9rem;
+    padding: 0.6rem;
     border-radius: 4px;
-    font-size: 14px;
+    font-size: 1rem;
     width: 100%;
-    max-width: 400px;
+    max-width: 25rem;
     text-align: center;
     box-sizing: border-box;
   }
 
   .error-message {
     background-color: #ffdddd;
-    color: #d8000c;
-    border: 1px solid #d8000c;
+    color: $color-red;
+    border: 1px solid $color-red;
   }
 
   .success-message {
     background-color: #ddffdd;
-    color: #4f8a10;
-    border: 1px solid #4f8a10;
+    color: $color-green-link;
+    border: 1px solid $color-green-mark;
   }
 
   /* Responsive Styles */
