--- a/src/components/pages/user/Login/Login.scss
+++ b/src/components/pages/user/Login/Login.scss
@@ -1,3 +1,5 @@
+@use '../../../../Sass/variables.scss' as *;
+
 .loginSection {
     display: flex;
     justify-content: center;
@@ -28,18 +30,18 @@
   
     &:focus {
       outline: none;
-      border: 2px solid #25D366;
+      border: 2px solid $color-green-btn;
     }
   
     &.error {
-      border-color: red;
+      border-color: $color-red;
     }
   }
   
   .btnLogin {
     padding: 0.75rem;
-    background-color: black;
-    color: #fff;
+    background-color:$color-black;
+    color:$color-white;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -47,7 +49,7 @@
     transition: background-color 0.3s ease;
   
     &:hover {
-      background-color: #25D366;
+      background-color: $color-green-btn;
     }
   }
   
@@ -98,7 +100,7 @@
       transform: translateY(-50%);
       cursor: pointer;
       font-size: 1.2em;
-      color: #888;
+      color: grey;
       z-index: 10;
       pointer-events: all;
     }
