--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -79,10 +79,10 @@
         }
 
         .networksFooter {
-            display: flex;
-            flex-direction: column;
+            display: grid;
+            grid-template-columns: 1fr 1fr; // Define dos columnas de igual tamaño
+            gap: 1rem; // Espacio entre columnas
             padding: 1rem 2rem;
-            gap: 0.5rem;
         }
 
 
